--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta charset="UTF-8">
     <title>Trivia !!!</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.css">
-    <link rel="stylesheet" href="Assets/CSS/style.css">
+    <link rel="stylesheet" href="./Assets/CSS/style.css">
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   </head>
   
@@ -23,7 +23,7 @@
       </div>
     </div>
 
-    <script type="text/javascript" src="Assets/JS/app.js"></script>
+    <script type="text/javascript" src="./Assets/JS/app.js"></script>
 
   </body>
 
